@startuml

skinparam defaultFontName "Poppins"

class Controller {
    matrix: [][]
    minimize(): int
    add(): void
}

class RSFactory {
    create(): RadioStation
    clone(rss: RadioStation[0..*]): RadioStation[0..*]
}

class Graph {
    radioStations: RadioStation[0..*]
    get(f: (RadioStation) -> bool): RadioStation
    add(n: RadioStation): void
    upload(): void
    dsatur(): void
    filtler(): RadioStation[0..*]
}

class RadioStation {
    id: int
    name: str
    color: str
    neighbors: int[0..*]
}

class GUI {
    draw(rss: RadioStation[0..*])
}

class Main {
    minimize()
    add()
}

RadioStation --o Graph
RSFactory -- Graph
Main -- Graph
Main -- GUI


@enduml
